fix hamburger menu alignment and z-index

--- a/style.css
+++ b/style.css
@@ -184,10 +184,12 @@
 
 @layer topnav {
   .topnav {
+    z-index: 10;
+
     &::before {
       content: "";
       position: fixed;
-      inset: 69px 0 0 0;
+      inset: 60px 0 0 0;
       background: var(--c-black-overlay);
       opacity: 0;
       pointer-events: none;
@@ -232,7 +234,7 @@
     margin-inline-start: auto;
     margin-block-end: 8rem;
     position: absolute;
-    top: 24px;
+    top: 19px;
   }
 
   .topnav__menu-content {
@@ -242,7 +244,7 @@
     @media (width < calc(700 / 16 * 1rem)) {
       flex-direction: column;
       position: fixed;
-      inset: 69px 120px 0 0;
+      inset: 60px 120px 0 0;
       padding: 64px 32px 24px;
       background-color: var(--c-xdark-navy);
       translate: -100vw 0;
